--- a/.github/workflows/pact-ci.yml
+++ b/.github/workflows/pact-ci.yml
@@ -274,59 +274,9 @@ jobs:
         PACT_BROKER_TOKEN: ${{ secrets.PACT_BROKER_TOKEN }}
 
   # Deployment Check
-  # Generate and publish test reports
-  publish-reports:
-    runs-on: ubuntu-latest
-    needs: [consumer-tests, provider-tests, contract-validation, security-scan, integration-tests]
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: artifacts/
-    
-    - name: Setup test environment
-      run: |
-        mkdir -p logs pacts reports
-        # Copy PACT files from artifacts
-        find artifacts/ -name "pact-files-*" -type d -exec cp -r {}/* pacts/ \; 2>/dev/null || true
-        # Copy test logs from artifacts
-        find artifacts/ -name "test-logs-*" -type d -exec cp -r {}/* logs/ \; 2>/dev/null || true
-        # Copy test reports from artifacts
-        find artifacts/ -name "test-reports-*" -type d -exec cp -r {}/* reports/ \; 2>/dev/null || true
-    
-    - name: Generate comprehensive test report
-      run: npm run test:reports:json
-      continue-on-error: true
-    
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-    
-    - name: Upload Pages artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: reports/
-    
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
-
   deployment-check:
     runs-on: ubuntu-latest
-    needs: [contract-validation, security-scan, integration-tests, publish-reports]
+    needs: [contract-validation, security-scan, integration-tests]
     if: github.ref == 'refs/heads/main'
     
     steps:
