--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,6 +1,14 @@
 name: Docker Build and Deploy
 
 on:
+  # Run after successful CI completion
+  workflow_run:
+    workflows: ["PACT Contract Testing CI/CD"]
+    types: [completed]
+    branches: [main]
+  # Allow manual triggering
+  workflow_dispatch:
+  # Run on successful pushes to main (but only after CI)
   push:
     branches: [ main ]
     tags: [ 'v*' ]
@@ -16,6 +24,8 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    # Only run if CI workflow was successful or if manually triggered
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push' || github.event_name == 'pull_request'
     
     steps:
     - name: Checkout code
