--- a/.github/workflows/simple-reports.yml
+++ b/.github/workflows/simple-reports.yml
@@ -1,9 +1,16 @@
 name: Generate Test Reports
 
 on:
+  # Run after successful CI completion
+  workflow_run:
+    workflows: ["PACT Contract Testing CI/CD"]
+    types: [completed]
+    branches: [main]
+  # Allow manual triggering
+  workflow_dispatch:
+  # Run on successful pushes to main
   push:
     branches: [main]
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -13,6 +20,8 @@ permissions:
 jobs:
   generate-and-publish-reports:
     runs-on: ubuntu-latest
+    # Only run if CI workflow was successful or if manually triggered
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
