--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,24 +65,39 @@ jobs:
         echo "NODE_ENV: $NODE_ENV"
         echo "🧪 Running tests sequentially to avoid port conflicts..."
         
-        # Run each test file separately with different ports
+        # Clean up any existing processes
+        echo "🧹 Cleaning up any existing processes..."
+        pkill -f "pact" || true
+        pkill -f "jest" || true
+        sleep 2
+        
+        # Run each test file separately with different ports and sequential execution
         echo "🔌 Running userService tests on port 3002..."
-        PACT_PORT=3002 timeout 300 npm test examples/consumer/__tests__/userService.pact.test.js || {
+        PACT_PORT=3002 npx jest examples/consumer/__tests__/userService.pact.test.js --runInBand --verbose || {
           echo "❌ userService tests failed"
           exit 1
         }
+        echo "✅ userService tests completed, cleaning up..."
+        pkill -f "pact" || true
+        sleep 1
         
         echo "🔌 Running simpleUserService tests on port 3003..."
-        PACT_PORT=3003 timeout 300 npm test examples/consumer/__tests__/simpleUserService.pact.test.js || {
+        PACT_PORT=3003 npx jest examples/consumer/__tests__/simpleUserService.pact.test.js --runInBand --verbose || {
           echo "❌ simpleUserService tests failed"
           exit 1
         }
+        echo "✅ simpleUserService tests completed, cleaning up..."
+        pkill -f "pact" || true
+        sleep 1
         
         echo "🔌 Running productService tests on port 3004..."
-        PACT_PORT=3004 timeout 300 npm test examples/consumer/__tests__/productService.pact.test.js || {
+        PACT_PORT=3004 npx jest examples/consumer/__tests__/productService.pact.test.js --runInBand --verbose || {
           echo "❌ productService tests failed"
           exit 1
         }
+        echo "✅ productService tests completed, cleaning up..."
+        pkill -f "pact" || true
+        sleep 1
         
         echo "✅ All consumer tests completed successfully"
       env:
