Scripts and readME updates

--- a/package.json
+++ b/package.json
@@ -5,30 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:single": "jest examples/consumer/__tests__/simpleUserService.pact.test.js",
     "test:consumer": "jest --testPathPattern=consumer",
     "test:provider": "jest --testPathPattern=provider",
-    "test:contract": "jest --testPathPattern=contract",
-    "test:simple": "jest examples/consumer/__tests__/simpleUserService.pact.test.js",
-    "test:verification": "jest examples/provider/__tests__/simpleUserService.verification.test.js",
-    "pact:publish": "pact-broker publish pacts --consumer-app-version=1.0.0 --broker-base-url=http://localhost:9292",
-    "pact:verify": "pact-broker verify --provider-base-url=http://localhost:3001 --broker-base-url=http://localhost:9292",
-    "start:broker": "docker run --rm -p 9292:9292 pactfoundation/pact-broker",
-    "start:provider": "node examples/provider/server.js",
-    "start:consumer": "node examples/consumer/client.js",
-    "ci:test": "npm run test:simple && npm run test:verification",
-    "ci:setup": "mkdir -p logs pacts",
-    "ci:cleanup": "rm -rf logs/* pacts/*.json",
-    "health:check": "curl -f http://localhost:3001/health || exit 1",
-    "security:audit": "npm audit --audit-level=moderate",
-    "security:check": "npm audit --audit-level=high",
-    "test:framework": "./test-framework.sh",
-    "test:all": "npm run ci:setup && npm run ci:test && npm run security:audit",
-    "test:reports": "node scripts/run-tests-with-reports.js",
-    "test:reports:json": "node scripts/run-tests-with-reports.js --json",
-    "test:reports:quiet": "node scripts/run-tests-with-reports.js --quiet",
-    "reports:generate": "node scripts/generate-reports.js",
-    "reports:view": "node -e \"const ReportGenerator = require('./utils/reportGenerator'); const rg = new ReportGenerator(); const latest = rg.getLatestReport(); if (latest) { console.log('Latest report:', latest); require('child_process').execSync('open ' + latest); } else { console.log('No reports found'); }\"",
-    "reports:list": "node -e \"const ReportGenerator = require('./utils/reportGenerator'); const rg = new ReportGenerator(); const reports = rg.listReports(); console.log('Available reports:'); reports.forEach(r => console.log('- ' + r.name + ' (' + r.timestamp + ')'));\""
+    "test:contract": "npm run test:consumer && npm run test:provider",
+    "setup": "mkdir -p logs pacts",
+    "cleanup": "rm -rf logs/* pacts/*.json"
   },
   "keywords": ["pact", "contract-testing", "microservices", "testing", "educational", "examples", "learning"],
   "author": "PACT Contract Testing Framework",
