--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "test:provider": "jest --testPathPattern=provider",
     "test:contract": "npm run test:consumer && npm run test:provider",
     "test:ci": "npm run setup && npm run test:consumer",
+    "test:working": "npm run test:consumer && npm run test:provider",
+    "test:with-servers": "node scripts/run-tests-with-servers.js",
+    "test:full": "npm run test:with-servers",
+    "test:advanced": "jest --testPathPattern=advanced",
+    "start:servers": "node scripts/start-servers.js",
     "setup": "mkdir -p logs pacts",
     "cleanup": "rm -rf logs/* pacts/*.json",
     "start:provider": "node examples/provider/server.js",
