--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "test:consumer": "jest --testPathPattern=consumer",
     "test:provider": "jest --testPathPattern=provider",
     "test:contract": "npm run test:consumer && npm run test:provider",
-    "test:ci": "npm run setup && npm run test:consumer",
+    "test:ci:old": "npm run setup && npm run test:consumer",
     "test:working": "npm run test:consumer && npm run test:provider",
     "test:with-servers": "node scripts/run-tests-with-servers.js",
     "test:full": "npm run test:with-servers",
+    "test:ci": "node scripts/run-ci-tests.js",
     "test:advanced": "jest --testPathPattern=advanced",
     "start:servers": "node scripts/start-servers.js",
     "setup": "mkdir -p logs pacts",
